--- a/run.env
+++ b/run.env
@@ -7,14 +7,14 @@ DR_CAR_COLOR=White
 DR_DISPLAY_NAME=$DR_CAR_NAME
 DR_RACER_NAME=$DR_CAR_NAME
 DR_ENABLE_DOMAIN_RANDOMIZATION=False
-DR_EVAL_NUMBER_OF_TRIALS=3
+DR_EVAL_NUMBER_OF_TRIALS=10
 DR_EVAL_IS_CONTINUOUS=True
-DR_EVAL_MAX_RESETS=100
+DR_EVAL_MAX_RESETS=10000
 DR_EVAL_OFF_TRACK_PENALTY=3.0
 DR_EVAL_COLLISION_PENALTY=5.0
-DR_EVAL_SAVE_MP4=False
+DR_EVAL_SAVE_MP4=True
 DR_EVAL_CHECKPOINT=last
-DR_EVAL_OPP_S3_MODEL_PREFIX=rl-deepracer-sagemaker
+DR_EVAL_OPP_S3_MODEL_PREFIX=rl-deepracer-1
 DR_EVAL_OPP_CAR_BODY_SHELL_TYPE=deepracer
 DR_EVAL_OPP_CAR_NAME=FasterCar
 DR_EVAL_OPP_DISPLAY_NAME=$DR_EVAL_OPP_CAR_NAME
@@ -29,7 +29,7 @@ DR_TRAIN_ROUND_ROBIN_ADVANCE_DIST=0.05
 DR_TRAIN_MULTI_CONFIG=False
 DR_TRAIN_MIN_EVAL_TRIALS=5
 #DR_TRAIN_RTF=1.0
-DR_LOCAL_S3_MODEL_PREFIX=rl-deepracer-sagemaker
+DR_LOCAL_S3_MODEL_PREFIX=rl-deepracer-1
 DR_LOCAL_S3_PRETRAINED=False
 DR_LOCAL_S3_PRETRAINED_PREFIX=rl-sagemaker-pretrained
 DR_LOCAL_S3_PRETRAINED_CHECKPOINT=last
