--- a/run.env
+++ b/run.env
@@ -1,7 +1,8 @@
 DR_RUN_ID=0
+DR_LOCAL_S3_MODEL_PREFIX=rl-deepracer-1
 DR_WORLD_NAME=reinvent_base
 DR_RACE_TYPE=TIME_TRIAL
-DR_CAR_NAME=FastCar
+DR_CAR_NAME=GroverBot
 DR_CAR_BODY_SHELL_TYPE=deepracer
 DR_CAR_COLOR=White
 DR_DISPLAY_NAME=$DR_CAR_NAME
@@ -29,7 +30,6 @@ DR_TRAIN_ROUND_ROBIN_ADVANCE_DIST=0.05
 DR_TRAIN_MULTI_CONFIG=False
 DR_TRAIN_MIN_EVAL_TRIALS=5
 #DR_TRAIN_RTF=1.0
-DR_LOCAL_S3_MODEL_PREFIX=rl-deepracer-1
 DR_LOCAL_S3_PRETRAINED=False
 DR_LOCAL_S3_PRETRAINED_PREFIX=rl-sagemaker-pretrained
 DR_LOCAL_S3_PRETRAINED_CHECKPOINT=last
